importing node_modules and design fixes
imported node_modules
fixed index.js to fit boxes in without getting cut off by the footer
removed footer designs in css files

--- a/Assignment2Site/public/Content/laptop.css
+++ b/Assignment2Site/public/Content/laptop.css
@@ -189,22 +189,6 @@ body {
 }
 /*End of Contact Page*/
 
-/*Footer*/
-.footerContainer {
-    display: block;
-    align-items: center;
-    text-align: center;
-    background-color: silver;
-}
-
-#footer {
-    display: block;
-    background-color: silver;
-    color: black;
-    height: 80px;
-    align-items: center;
-}
-/*End of Footer*/
 
  /*Clears Floats*/
  .clear {
